<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AddVehicleFragment">

    <ImageView
        android:id="@+id/iv_add_vehicle_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/iv_add_vehicle_img_desc"
        android:minHeight="256dp"
        android:padding="16dp"
        android:src="@drawable/ic_vehicle_placeholder"
        app:layout_constraintBottom_toTopOf="@id/et_vehicle_manufacturer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_add_camera_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/ib_add_image_img_desc" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_vehicle_manufacturer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/et_vehicle_manufacturer_hint"
        android:outlineAmbientShadowColor="@color/blue_700"
        android:outlineSpotShadowColor="@color/blue_200"
        android:textColor="@color/black"
        android:textColorHighlight="@color/blue_200"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/et_vehicle_model"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_add_vehicle_image">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_vehicle_model"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/et_vehicle_model_hint"
        android:outlineAmbientShadowColor="@color/blue_700"
        android:outlineSpotShadowColor="@color/blue_200"
        android:textColor="@color/black"
        android:textColorHighlight="@color/blue_200"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/et_vehicle_registration_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_vehicle_manufacturer">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_vehicle_registration_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/et_vehicle_registration_hint"
        android:outlineAmbientShadowColor="@color/blue_700"
        android:outlineSpotShadowColor="@color/blue_200"
        android:textColor="@color/black"
        android:textColorHighlight="@color/blue_200"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_vehicle_model">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>